# babelqueue-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/babelqueue/: __init__.py  app.py  artemis_transport.py  asb_transport.py  celery.py  codec.py  contracts.py  dead_letter.py  exceptions.py  gdpr.py  headers.py  idempotency.py  kafka_transport.py  otel.py  outbox.py  pika_transport.py  pulsar_transport.py  redis_transport.py  redrive.py  replay.py  routing.py  schema.py  sqs_transport.py  transport.py
src/babelqueue/django/: __init__.py  apps.py
src/babelqueue/django/management/commands/: babelqueue_worker.py
tests/: test_app.py  test_artemis_conformance.py  test_artemis_transport.py  test_asb_conformance.py  test_asb_transport.py  test_celery.py  test_codec.py  test_conformance.py  test_dead_letter.py  test_django.py  test_gdpr.py  test_headers.py  test_idempotency.py  test_kafka_conformance.py  test_kafka_transport.py  test_otel.py  test_outbox.py  test_overhead.py  test_pika_transport.py  test_pulsar_conformance.py  test_pulsar_transport.py  test_redis_transport.py  test_redrive.py  test_replay.py  test_schema.py  test_schema_conformance.py  test_sqs_conformance.py  test_sqs_transport.py
