[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "babelqueue"
version = "1.7.0"
description = "Polyglot Queues, Simplified — the Python core: the canonical BabelQueue wire-envelope codec, contracts and dead-letter helpers."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Muhammet Şafak", email = "info@muhammetsafak.com.tr" }]
keywords = ["queue", "polyglot", "microservices", "json", "envelope", "messaging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
# Optional runtime drivers + framework adapters — standard, zero-heavy-dep.
redis = ["redis>=4"]
amqp = ["pika>=1.3"]
sqs = ["boto3>=1.26"]
azureservicebus = ["azure-servicebus>=7.11", "azure-identity>=1.15"]
pulsar = ["pulsar-client>=3.4"]
kafka = ["confluent-kafka>=2.3"]
artemis = ["python-qpid-proton>=0.39"]
otel = ["opentelemetry-api>=1.20"]
celery = ["celery>=5"]
django = ["django>=4.2"]
dev = ["pytest>=7", "pytest-cov>=4", "mypy>=1.8", "ruff>=0.5"]

[project.urls]
Homepage = "https://babelqueue.com"
Source = "https://github.com/BabelQueue/babelqueue-python"
Issues = "https://github.com/BabelQueue/babelqueue-python/issues"
Changelog = "https://github.com/BabelQueue/babelqueue-python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/babelqueue"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.mypy]
# Lowest target mypy accepts; the package itself still supports Python 3.9 at
# runtime (requires-python >=3.9) and uses only 3.9-compatible typing.
python_version = "3.10"
files = ["src/babelqueue"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["babelqueue"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:"]
